# Research-Platform

./: .cursorignore  .gitignore  AGENTS.md  README.md
.cursor/rules/: 000-project-charter.mdc  010-architecture-boundaries.mdc
apps/api/: README.md  pyproject.toml
apps/api/src/workbench/: __init__.py  main.py
apps/api/src/workbench/agents/: __init__.py
apps/api/src/workbench/api/: __init__.py  routes_health.py
apps/api/src/workbench/application/: __init__.py
apps/api/src/workbench/compute/: __init__.py
apps/api/src/workbench/core/: __init__.py  enums.py  ids.py  schemas.py  time.py
apps/api/src/workbench/modules/: __init__.py
apps/api/src/workbench/observability/: __init__.py
apps/api/src/workbench/provenance/: __init__.py
apps/api/src/workbench/storage/: __init__.py
apps/api/tests/: __init__.py  test_health.py
apps/api/tests/architecture/: test_import_boundaries.py
apps/api/tests/core/: test_artifact_ref_schema.py  test_enums.py  test_ids.py  test_lifecycle_schemas.py  test_time.py
docs/: ARCHITECTURE.md  DATA_MODEL.md  REVIEW_CHECKLIST.md  ROADMAP.md
