[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workbench"
version = "0.0.1"
description = "Research Workbench — local-first scientific visual research platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/workbench"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
